--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ footer:
       url: "https://github.com/logeshg2"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: "https:www.linkedin.com/in/logeshg2/"
+      url: "https://www.linkedin.com/in/logeshg2/"
     # - label: "Instagram"
     #   icon: "fab fa-fw fa-instagram"
     #   url: "https://instagram.com/"
