--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 # twitter_username: username
 linkedin_username: logeshg2
 github_username: logeshg2
-minimal_mistakes_skin: default
+minimal_mistakes_skin: dark #default
 search: true
 
 # Build settings
