--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,11 @@ include:
 #   - vendor/gems/
 #   - vendor/ruby/
 
+markup:
+  defaultMarkdownHandler: blackFriday
+  blackFriday:
+    hrefTargetBlank: true
+
 # Plugins (previously gems:)
 plugins:
   - jekyll-paginate
