--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,9 @@ github_username: logeshg2
 minimal_mistakes_skin: dark #default
 logo: "/assets/images/favicon.ico"
 search: true
-target_blank: true
+# target_blank: true
+target-blank:
+    css_class: ext-link
 
 # Build settings
 markdown: kramdown
