--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,9 @@ plugins:
 author:
   name   : "Logesh G"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "Student | Robotics and Computer Vision Enthusiast"
+  bio    : >-
+    "Student" 
+    "Robotics and Computer Vision Enthusiast"
   location: "Erode, India"
   links:
     - label: "Website"
