--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 main:
   - title: "About"
+    url: /
+  - title: "About"
     url: /about/
   - title: "Projects and Competitions"
     url: /proj_comp/
