--- a/_config.yml
+++ b/_config.yml
@@ -33,9 +33,9 @@ remote_theme: mmistakes/minimal-mistakes
 repository: "logeshg2/logeshg2.github.io"
 
 # Outputting
-# permalink: /:categories/:title/
-# paginate: 5 # amount of posts to show
-# paginate_path: /page:num/
+permalink: /:categories/:title/
+paginate: 5 # amount of posts to show
+paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
