--- a/_config.yml
+++ b/_config.yml
@@ -127,10 +127,12 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
+      read_time: false
       comments: true
-      share: true
+      share: false
       related: true
+      toc: true
+      toc_sticky: true
 
 category_archive:
   type: liquid
