--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ author:
   bio    : |+
     Student 
     Robotics and Computer Vision Enthusiast
-  location: "Erode, India"
+  location: "Tamil Nadu, India"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
