--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ linkedin_username: logeshg2
 github_username: logeshg2
 minimal_mistakes_skin: dark #default
 logo: "/assets/images/favicon.ico"
-search: true
+search: false
 # target_blank: true
 
 # Build settings
