--- a/_config.yml
+++ b/_config.yml
@@ -86,6 +86,9 @@ author:
     - label: "Youtube"
       icon: "fab fa-fw fa-youtube"
       url: "https://www.youtube.com/@LogRobotics"
+    - label: "Resume"
+      icon: "fab fa-fw fa-document"
+      url: <a href="assets/docs/Resume.pdf" target="_blank">Resume</a>
     # - label: "Instagram"
     #   icon: "fab fa-fw fa-instagram"
     #   url: "https://instagram.com/"
