--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
       url: "https://www.youtube.com/@LogRobotics"
     - label: "Resume"
       icon: "fab fa-fw fa-document"
-      url: <a href="assets/docs/Resume.pdf" target="_blank">Resume</a>
+      url: "assets/Resume.pdf"
     # - label: "Instagram"
     #   icon: "fab fa-fw fa-instagram"
     #   url: "https://instagram.com/"
