--- a/_config.yml
+++ b/_config.yml
@@ -70,6 +70,7 @@ author:
     Student <br>
     Robotics and Computer Vision Enthusiast
   location: "Tamil Nadu, India"
+  email: "logeshg248@gmail.com"
   links:
     # - label: "Website"
       # icon: "fas fa-fw fa-link"
