--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Logesh G
-email: logeshg248@gmail.com
+email: "logeshg248@gmail.com"
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -68,9 +68,10 @@ author:
   avatar : "/assets/images/bio-photo.jpg"
   bio    : |+
     Student <br>
-    Robotics and Computer Vision Enthusiast
+    Robotics and Computer Vision Enthusiast <br>
+    logeshg248@gmail.com
   location: "Tamil Nadu, India"
-  email: "logeshg248@gmail.com"
+  # email: "logeshg248@gmail.com"
   links:
     # - label: "Website"
       # icon: "fas fa-fw fa-link"
