--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ author:
     Student <br>
     Robotics and Computer Vision Enthusiast
   location: "Tamil Nadu, India"
-  # email: "logeshg248@gmail.com"
+  email: "logeshg248@gmail.com"
   links:
     # - label: "Website"
       # icon: "fas fa-fw fa-link"
@@ -78,8 +78,6 @@ author:
     # - label: "Twitter"
     #   icon: "fab fa-fw fa-twitter-square"
     #   url: "https://twitter.com/"
-    - label: "logeshg248@gmail.com"
-      icon: "fab fa-fw fa-email"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/logeshg2"
