--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ author:
   name   : "Logesh G"
   avatar : "/assets/images/bio-photo.jpg"
   bio    : |+
-    Student <br>
+    Working on robot manipulators <br>
     Robotics and Computer Vision Enthusiast
   location: "Tamil Nadu, India"
   email: "logeshg248@gmail.com"
